Add AST Matcher write barrier checker

--- a/wbcheck/Makefile
+++ b/wbcheck/Makefile
@@ -3,7 +3,11 @@
 CC = clang
 
 wb:
-	$(CC) -o wb -g wb.c -lclang
+	g++ -fno-rtti -O0 -g `/home/wade/build//bin/llvm-config --cxxflags` -I/home/wade/llvm//tools/clang/include -I/home/wade/build//tools/clang/include wb.cpp \
+	-Wl,--start-group -lclangAST -lclangASTMatchers -lclangAnalysis -lclangBasic -lclangDriver -lclangEdit -lclangFrontend -lclangFrontendTool -lclangLex -lclangParse -lclangSema -lclangEdit -lclangRewrite -lclangRewriteFrontend -lclangStaticAnalyzerFrontend -lclangStaticAnalyzerCheckers -lclangStaticAnalyzerCore -lclangSerialization -lclangToolingCore -lclangTooling -lclangFormat -Wl,--end-group `/home/wade/build//bin/llvm-config --ldflags --libs --system-libs` -o wb
+
+wb-libclang:
+	$(CC) -o wb-libclang -g wb-libclang.c -lclang
 
 clean:  
 	rm -f wb
